--- a/index.html
+++ b/index.html
@@ -85,6 +85,46 @@
                         <img src="images/tutorial.png">
                     </section>
 
+                    <section>
+                        <h3 style="text-align:center">Exercises</h3>
+                        <ul>
+                        <li>1 - Data exploration.ipynb</li>
+                        <li>2 - Charts.ipynb</li>
+                        <li>3 - Plotting.ipynb</li>
+                        <li>4 - Models.ipynb</li>
+                        <li>5 - Layouts.ipynb</li>
+                        </ul>
+                    </section>
+
+                    <section>
+                        <h3 style="text-align:center">Tutorial Setup</h3>
+
+                        <pre><code class="prettyprint prettyprinted">
+$ git clone https://github.com/chdoig/pyladiesatx-bokeh-tutorial
+                        </code></pre>
+
+                        <p style="font-size:36px"><a href="http://chdoig.github.io/pyladiesatx-bokeh-tutorial/#/">http://chdoig.github.io/pyladiesatx-bokeh-tutorial/#/</p>
+
+                    </section>
+
+                    <section>
+                        <h3 style="text-align:center">Tutorial Setup</h3>
+
+                        <p><a href="https://store.continuum.io/cshop/anaconda/">Anaconda:</a> Python + Conda + a bunch of packages</p>
+
+                        <p>or</p>
+                        <p><a href="http://conda.pydata.org/miniconda.html">Miniconda:</a> Python + Conda +</p>
+
+                        <pre><code class="prettyprint prettyprinted">
+$ conda env create
+$ source activate pyladies-bokeh
+                        </code></pre>
+                        <pre><code class="prettyprint prettyprinted">
+$ python -c "import bokeh.sampledata; bokeh.sampledata.download()"
+                        </code></pre>
+                        <p style="text-align:center"    >Bokeh version: 0.9.0</p>
+                    </section>
+
 
                     <section>
                         <h3 style="text-align:center">Bokeh Setup</h3>
@@ -103,23 +143,13 @@ $ pip install bokeh
                         <p><a href="http://bokeh.pydata.org/en/latest/docs/installation.html">http://bokeh.pydata.org/en/latest/docs/installation.html</a></p></div>
                     </section>
 
+
                     <section>
-                        <h3 style="text-align:center">Tutorial Setup</h3>
+                        <h3 style="text-align:center">Exercise 1</h3>
+                        <p>1- Data exploration.ipynb</p>
 
-                        <p><a href="https://store.continuum.io/cshop/anaconda/">Anaconda:</a> Python + Conda + a bunch of packages</p>
-
-                        <p>or</p>
-                        <p><a href="http://conda.pydata.org/miniconda.html">Miniconda:</a> Python + Conda +</p>
-
-                        <pre><code class="prettyprint prettyprinted">
-$ conda env create
-$ source activate bokeh-tutorial
-                        </code></pre>
-                        <pre><code class="prettyprint prettyprinted">
-$ python -c "import bokeh.sampledata; bokeh.sampledata.download()"
-                        </code></pre>
-                        <p style="text-align:center"    >Bokeh version: 0.9.0</p>
                     </section>
+
 				</section>
 
                  <section>
@@ -133,6 +163,11 @@ $ python -c "import bokeh.sampledata; bokeh.sampledata.download()"
                         <h3 style="text-align:center">Resources</h3>
                         <li><a href="http://bokeh.pydata.org/en/latest/docs/user_guide/charts.html">Documentation</a></li>
                         <li><a href="https://github.com/bokeh/bokeh/tree/0.9.0/examples/charts">Examples</a></li>
+                    </section>
+
+                    <section>
+                    <h3 style="text-align:center">Exercise 2</h3>
+                        <p>2- Charts.ipynb</p>
                     </section>
 
                 </section>
@@ -150,6 +185,10 @@ $ python -c "import bokeh.sampledata; bokeh.sampledata.download()"
                         <li><a href="https://github.com/bokeh/bokeh/tree/0.9.0/examples/plotting">Examples</a></li>
                     </section>
 
+                    <section>
+                        <h3 style="text-align:center">Exercise 3</h3>
+                        <p>3- Plotting.ipynb</p>
+                    </section>
 
                 </section>
 
@@ -168,6 +207,12 @@ $ python -c "import bokeh.sampledata; bokeh.sampledata.download()"
                         <li><a href="http://bokeh.pydata.org/en/latest/docs/reference/models.html">Documentation</a></li>
                         <li><a href="https://github.com/bokeh/bokeh/tree/0.9.0/examples/glyphs">Examples</a></li>
                     </section>
+
+
+                    <section>
+                        <h3 style="text-align:center">Exercise 4</h3>
+                        <p>4- Plotting.ipynb</p>
+                    </section>
                 </section>
 
                  <section>
@@ -184,35 +229,6 @@ $ python -c "import bokeh.sampledata; bokeh.sampledata.download()"
                         <li><a href="https://github.com/bokeh/bokeh/tree/0.9.0/examples/charts">Chart examples</a></li>
                     </section>
 
-                </section>
-
-                <section>
-                    <section>
-                        <h2>Embed</h2>
-                    </section>
-                    <section>
-                        <img src="images/embed.png">
-                    </section>
-                    <section>
-                        <h3 style="text-align:center">Resources</h3>
-                        <li><a href="http://bokeh.pydata.org/en/latest/docs/user_guide/embed.html">Documentation</a></li>
-                        <li><a href="https://github.com/bokeh/bokeh/tree/0.9.0/examples/embed">Examples</a></li>
-                    </section>
-
-                </section>
-
-                <section>
-                    <section>
-                        <h2>Compat</h2>
-                    </section>
-                    <section>
-                        <img src="images/compat.png">
-                    </section>
-                    <section>
-                        <h3 style="text-align:center">Resources</h3>
-                        <li><a href="http://bokeh.pydata.org/en/latest/docs/user_guide/compat.html">Documentation</a></li>
-                        <li><a href="https://github.com/bokeh/bokeh/tree/0.9.0/examples/compat">Examples</a></li>
-                    </section>
                 </section>
 
 
@@ -237,6 +253,44 @@ $ python -c "import bokeh.sampledata; bokeh.sampledata.download()"
                         <li><a href="http://bokeh.pydata.org/en/latest/docs/user_guide/styling.html">Styling</a></li>
                     </section>
 
+                    <section>
+                        <h3 style="text-align:center">Exercise 5</h3>
+                        <p>5- Layouts.ipynb</p>
+                    </section>
+                </section>
+
+                 <section>
+                    <section>
+                        <h2>Embed</h2>
+                    </section>
+                    <section>
+                        <img src="images/embed.png">
+                    </section>
+                    <section>
+                        <h3 style="text-align:center">Resources</h3>
+                        <li><a href="http://bokeh.pydata.org/en/latest/docs/user_guide/embed.html">Documentation</a></li>
+                        <li><a href="https://github.com/bokeh/bokeh/tree/0.9.0/examples/embed">Examples</a></li>
+                    </section>
+
+                    <section>
+                        <h3 style="text-align:center">Exercise 6</h3>
+                        <p>6- Embed.ipynb</p>
+                    </section>
+
+                </section>
+
+                <section>
+                    <section>
+                        <h2>Compat</h2>
+                    </section>
+                    <section>
+                        <img src="images/compat.png">
+                    </section>
+                    <section>
+                        <h3 style="text-align:center">Resources</h3>
+                        <li><a href="http://bokeh.pydata.org/en/latest/docs/user_guide/compat.html">Documentation</a></li>
+                        <li><a href="https://github.com/bokeh/bokeh/tree/0.9.0/examples/compat">Examples</a></li>
+                    </section>
                 </section>
 
                  <section>
