add embed in index

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                         <li>3 - Plotting.ipynb</li>
                         <li>4 - Models.ipynb</li>
                         <li>5 - Layouts.ipynb</li>
+                        <li>6 - Embed.ipynb</li>
                         </ul>
                     </section>
 
